components/autocomplete/autocomplete.css
.container {
    composes: clearfix from '../styles.css';
    position: relative;
}

.input {
    composes: pad-1 from '../styles.css';
	composes: border-gray from '../styles.css';
	float:left;
	position: relative;
	width: 100%;
	display: block;
	margin-bottom: -1px;
	border-width: 1px;
	appearance: none;
	box-shadow: none;
	transition: box-shadow 0.3s, border 0.3s;
	box-sizing: border-box;
}

.input:focus {
    border: solid 1px #66afe9;
    outline: none;
    -webkit-box-shadow: 0 0 5px 1px rgba(0,0,0,.075), 0 0 5px 1px rgba(102, 175, 233, .6);
          box-shadow: 0 0 5px 1px rgba(0,0,0,.075), 0 0 5px 1px rgba(102, 175, 233, .6);
}

.containerOpen .input {
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
}

.suggestionsContainer {
    position: absolute;
    top: 100%;
    max-height: 45vh;
    overflow-y: auto;
    display: block;
    width: 100%;
    padding: 0;
    margin: 0;
    list-style-type: none;
    border: 1px solid #aaa;
    background-color: #fff;
    font-weight: 300;
    font-size: 16px;
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 4px;
    z-index: 2;
    box-sizing: border-box;
}

.suggestion {
    composes: pad-1 from '../styles.css';
    cursor: pointer;
}

.suggestionFocused {
    background-color: #ddd;
}

.sectionTitle {
    padding: .5rem 0 0 .5rem;
    font-size: 12px;
    color: #777;
    border-top: 1px dashed #ccc;
}

.sectionContainer:first-child .sectionTitle {
    border-top: 0;
}

.sectionSuggestionsContainer {
    margin: 0;
    padding: 0;
    list-style-type: none;
}

